Fixing weird issue with including files into the opencms.war file.